--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
       </form>
 
       <div id="userInfo" class="mt-4 w-50 mx-auto"></div>
+      <div id="loading" class="text-center my-3" style="display: none">
+        <div class="spinner-border text-success" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
+
       <div id="posts" class="mt-3 w-75 mx-auto"></div>
     </div>
 
